# qdrant-dump

./: .gitignore  Cargo.toml  README.md  TESTING.md  quick_test_setup.sh  setup_test_collections.py
src/: client.rs  dump.rs  main.rs  models.rs  utils.rs
