[package]
name = "qdrant-dump"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
indicatif = "0.17"
anyhow = "1.0.100"
bytes = "1.10.1"
urlencoding = "2.1"

